--- a/src/app/components/menu/menu.template.html
+++ b/src/app/components/menu/menu.template.html
@@ -5,7 +5,7 @@
     <a class="item">Upcoming Events</a>
   </div>
 </div>
-
+{{ logging }}
 <div *ngIf="!logging">
   <div class="ui two item menu">
     <a class="item" routerLink="/home">Home</a>
