Add algolia instantsearch. Needs to add data in algolia server. Add uisearch component.

--- a/src/app/traveller/traveller.component.html
+++ b/src/app/traveller/traveller.component.html
@@ -1,3 +1,4 @@
-<p>
-  traveller works!
-</p>
+<H1 style="text-align: center; margin-top: 15px;">
+  Trouver l'hôte de vos rêves !!
+</H1>
+<search-ui></search-ui>
