--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,27 @@
-<div class="ui middle aligned center aligned grid" style="height: 100%">
-  <div class="column seven wide">
-    <h2 class="ui teal icon header">
-      <div class="content">
-        Se connecter
-      </div>
-    </h2>
+<div class="ui middle container aligned center aligned stackable grid" style="height: 100%">
+  <div class="seven wide column middle aligned">
+
     <form class="ui large form">
+
       <div class="ui stacked segment">
+        <h2 class="ui orange icon header">
+          <div class="content">
+            Se connecter
+          </div>
+        </h2>
         <div class="field">
           <div class="ui left icon input">
             <i class="user icon"></i>
-            <input type="text" name="email" placeholder="E-mail address">
+            <input [(ngModel)]="email" type="text" name="email" placeholder="E-mail address">
           </div>
         </div>
         <div class="field">
           <div class="ui left icon input">
             <i class="lock icon"></i>
-            <input type="password" name="password" placeholder="Password">
+            <input [(ngModel)]="passwd" type="password" name="password" placeholder="Password">
           </div>
         </div>
-        <div class="ui fluid large teal submit button">Se connecter</div>
+        <div (click)="onClickLogin()" class="ui fluid large orange submit button">Se connecter</div>
       </div>
 
       <div class="ui error message"></div>
