--- a/src/app/menu-computer/menu-computer.component.html
+++ b/src/app/menu-computer/menu-computer.component.html
@@ -1,4 +1,6 @@
-<div class="ui large secondary inverted pointing menu">
+
+
+<div class="ui large secondary inverted pointing menu" *ngIf="!logging.isLogin()">
   <div class="ui container">
     <a class="active item" routerLink="/">Accueil</a>
     <a class="item" routerLink="/manager/hoster">Devenir hote</a>
@@ -13,4 +15,21 @@
       </div>
     </div>
   </div>
+</div>
+
+<div class="ui large secondary inverted pointing menu" *ngIf="logging.isLogin()">
+    <div class="ui container">
+        <a class="active item" routerLink="/">Accueil</a>
+        <a class="item" routerLink="/manager/hoster">Devenir hote</a>
+        <a class="item" routerLink="/manager/traveller">Organiser son voyage</a>
+        <a class="item">Careers</a>
+        <!--<div class="right menu">
+            <div class="item">
+                <a class="ui button" routerLink="/enter/l">Se connecter</a>
+            </div>
+            <div class="item">
+                <a class="ui primary button" routerLink="/enter/r">S'inscrire</a>
+            </div>
+        </div>-->
+    </div>
 </div>
