--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,25 +1,26 @@
-<div class="ui middle aligned center aligned grid" style="height: 100%">
-  <div class="column seven wide">
-    <h2 class="ui teal icon header">
-      <div class="content">
-        S'inscrire
-      </div>
-    </h2>
+<div class="ui middle container aligned center aligned stackable grid" style="height: 100%">
+  <div class="seven wide column middle aligned">
+
     <form class="ui large form">
       <div class="ui stacked segment">
+        <h2 class="ui teal icon header">
+          <div class="content">
+            S'inscrire
+          </div>
+        </h2>
         <div class="field">
           <div class="ui left icon input">
             <i class="user icon"></i>
-            <input type="text" name="email" placeholder="E-mail address">
+            <input [(ngModel)]="email" type="text" name="email" placeholder="E-mail address">
           </div>
         </div>
         <div class="field">
           <div class="ui left icon input">
             <i class="lock icon"></i>
-            <input type="password" name="password" placeholder="Password">
+            <input [(ngModel)]="passwd" type="password" name="password" placeholder="Password">
           </div>
         </div>
-        <div class="ui fluid large teal submit button">S'inscrire</div>
+        <div (click)="onClickRegister()" class="ui fluid large teal submit button">S'inscrire</div>
       </div>
 
       <div class="ui error message"></div>
@@ -27,7 +28,7 @@
     </form>
 
     <div class="ui message">
-      Deja un comte ? <a routerLink="/enter/l">Se connecter</a>
+      Deja un compte ? <a routerLink="/enter/l">Se connecter</a>
     </div>
   </div>
 </div>
