--- a/src/app/hoster/hoster.component.html
+++ b/src/app/hoster/hoster.component.html
@@ -8,82 +8,51 @@
 <div class="ui grid container">
   <div class="one column row">
     <div class="column">
+      <div class="ui blue segment" style="padding-bottom: 40px">
       <h1 class="ui header blue">Ajouter</h1>
       <div class="ui form">
         <div class="fields">
-          <div class="six wide field">
-            <label>First name</label>
-            <input type="text" placeholder="First Name">
+          <div class="nine wide field">
+            <input [(ngModel)]="title" type="text" placeholder="Entrez le titre de votre offre">
           </div>
-          <div class="four wide field">
-            <label>Middle</label>
-            <input type="text" placeholder="Middle Name">
-          </div>
-          <div class="six wide field">
-            <label>Last name</label>
-            <input type="text" placeholder="Last Name">
+          <div class="seven wide field">
+            <input [(ngModel)]="userName" type="text" placeholder="Entrez votre nom">
           </div>
         </div>
-        <div class="fields">
-          <div class="two wide field">
-            <input type="text" placeholder="2 Wide">
-          </div>
-          <div class="twelve wide field">
-            <input type="text" placeholder="12 Wide">
-          </div>
-          <div class="two wide field">
-            <input type="text" placeholder="2 Wide">
-          </div>
+        <div class="sixteen wide field">
+          <span class="label">
+            Entrez le nom de votre offre :
+          </span>
+          <textarea [(ngModel)]="details" type="text"></textarea>
         </div>
-        <div class="fields">
-          <div class="eight wide field">
-            <input type="text" placeholder="8 Wide">
-          </div>
-          <div class="six wide field">
-            <input type="text" placeholder="6 Wide">
-          </div>
-          <div class="two wide field">
-            <input type="text" placeholder="2 Wide">
-          </div>
-        </div>
-      </div>
-      <h1 class="ui header blue">Listes de vos adresses</h1>
 
+        <div (click)="onClickAddOffer()" class="ui right floated positive button">Enregistrer l'offre</div>
+      </div>
+      </div>
+  </div>
+  </div>
+  <div class="one column row">
+    <div class="column">
+    <div class="ui segment">
+    <h1 class="ui header">Listes de vos adresses</h1>
       <div class="ui one cards">
-        <div class="card">
-          <div class="content">
-            <img class="right floated mini ui image" src="/images/avatar/large/elliot.jpg">
-            <div class="header">
-              Elliot Fu
-            </div>
-            <div class="meta">
-              Friends of Veronika
-            </div>
-            <div class="description">
-              Elliot requested permission to view your contact details
+          <div class="card">
+            <div class="content">
+              <div class="header">
+                Titre de l'offre
+              </div>
+              <div class="meta">
+                Nom de l'utilisateur / utilisatrice
+              </div>
+              <div class="description">
+                Contenu de l'offre
+              </div>
             </div>
           </div>
 
         </div>
-        <div class="card">
-          <div class="content">
-            <img class="right floated mini ui image" src="/images/avatar/large/jenny.jpg">
-            <div class="header">
-              Jenny Hess
-            </div>
-            <div class="meta">
-              New Member
-            </div>
-            <div class="description">
-              Jenny wants to add you to the group <b>best friends</b>
-            </div>
-          </div>
-          <div class="extra content">
 
-          </div>
-        </div>
       </div>
-
     </div>
   </div>
 </div>
