--- a/src/app/menu-tab-mobile/menu-tab-mobile.component.html
+++ b/src/app/menu-tab-mobile/menu-tab-mobile.component.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<div class="ui left demo vertical inverted sidebar labeled icon menu {{ sidebarStatus }}">
+<div class="ui left demo vertical inverted sidebar labeled icon menu {{ sidebarStatus }}" *ngIf="!logging.isLogin()">
   <a class="disabled item" (click)="closeSidebar()">
     <i style="color: darkred !important;" class="close icon"></i>
   </a>
@@ -32,5 +32,23 @@
   </a>
 
 
+</div>
+
+<div class="ui left demo vertical inverted sidebar labeled icon menu {{ sidebarStatus }}" *ngIf="logging.isLogin()">
+    <a class="disabled item" (click)="closeSidebar()">
+        <i style="color: darkred !important;" class="close icon"></i>
+    </a>
+    <a class="item" routerLink="/">
+        <i class="home icon"></i>
+        Accueil
+    </a>
+    <a class="item" routerLink="/manager/hoster">
+        <i class="block layout icon"></i>
+        Devenir hote
+    </a>
+    <a class="item" routerLink="/manager/traveller">
+        <i class="smile icon"></i>
+        Organiser son voyage
+    </a>
 </div>
 
