--- a/src/app/search-ui/search-ui.component.html
+++ b/src/app/search-ui/search-ui.component.html
@@ -1,18 +1,39 @@
-<div style="text-align: center">
-    <div id="search-box">
-        <!-- SearchBox widget will appear here -->
+<div class="w3-sidebar w3-bar-block" style="width:15%; height: inherit!important;">
+
+    <div id="domaine_filter">
+        <!-- filter for domaine will appear here -->
     </div>
+
+    <div id="city_filter">
+        <!-- filter for domaine will appear here -->
+    </div>
+
 </div>
-<div style="margin-left: 10%">
-    <div id="stats">
-        <!-- stats widget will appear here -->
+
+<div style="margin-left:15%">
+    <div style="text-align: center">
+
+        <div id="search-box">
+            <!-- SearchBox widget will appear here -->
+        </div>
+
     </div>
-    <div class="ui items">
-        <div id="hits">
-            <!-- Hits widget will appear here -->
+    <div style="margin-left: 10%">
+        <div id="stats">
+            <!-- stats widget will appear here -->
+        </div>
+        <div class="ui items">
+            <div id="hits">
+                <!-- Hits widget will appear here -->
+            </div>
+        </div>
+        <div id="pagination">
+            <!-- pagination widget will appear here -->
         </div>
     </div>
-    <div id="pagination">
-        <!-- pagination widget will appear here -->
-    </div>
 </div>
+
+
+
+
+
