--- a/src/app/search-ui/search-ui.component.html
+++ b/src/app/search-ui/search-ui.component.html
@@ -1,4 +1,4 @@
-<div class="w3-sidebar w3-bar-block" style="width:15%; height: inherit!important;">
+<div class="w3-sidebar w3-bar-block" style="width:18%; height: inherit!important;">
 
     <div id="domaine_filter">
         <!-- filter for domaine will appear here -->
@@ -8,9 +8,13 @@
         <!-- filter for domaine will appear here -->
     </div>
 
+    <div id="seat_filter">
+
+    </div>
+
 </div>
 
-<div style="margin-left:15%">
+<div style="margin-left:18%">
     <div style="text-align: center">
 
         <div id="search-box">
