Make the landing page great again

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,11 +2,122 @@
   <!--<sui-progress [value]="10" [showProgress]="true" [maximum]="100" [precision]="1">
     Progress Bar Label
   </sui-progress>-->
-  <div class="ui grid center aligned">
-    <div class="row">
-      <div class="column">
-        <h1 class="ui huge blue header">Bienvenue sur Travel skills !</h1>
-        <h2 class="ui sub header">Offrez vous le voyage de votre vie sans payer ni nouriture, ni hotels !</h2>
+  <style>
+  #sub {
+  font-size: 0.68em;
+  font-weight: normal;
+  text-shadow: 2px 1px 0 black;
+    color: white;
+  }
+
+    .parallax {
+      -webkit-filter: blur(5px);
+      -moz-filter: blur(3px);
+      -o-filter: blur(3px);
+      -ms-filter: blur(3px);
+      filter: blur(3px);
+    }
+
+  .big-parallax {
+    -webkit-filter: blur(9px);
+    -moz-filter: blur(9px);
+    -o-filter: blur(9px);
+    -ms-filter: blur(9px);
+    filter: blur(9px);
+  }
+
+  @media (min-width:320px)  { #footer-hidder-component {margin-bottom: -2px !important;} }
+  @media (min-width:1000px) { #footer-hidder-component {margin-bottom: 256px !important} }
+  @media (min-width:1281px) { #footer-hidder-component {margin-bottom: 265px !important} }
+  </style>
+  <div class="ui grid center aligned stackable">
+
+
+    <div class="parallax-container" id="footer-hidder-component" style="width: 100%; height: auto; margin-bottom: 265px;">
+      <div class="parallax big-parallax" materialize="parallax"><img height="200%" src="https://i.pinimg.com/736x/99/0d/e7/990de73cd0726be18d948a9b083e735f--flat-illustration-phone-wallpapers.jpg"></div>
+      <div class="ui grid stackable container center aligned" style="width: 100%; height: 100%">
+
+        <div class="two column row" style="margin-top: 30px !important;">
+          <div class="column center aligned">
+            <div class="ui inverted segment" style="background: rgba(27, 28, 29, .7);">
+          <h1 class="ui huge inverted header">
+            <img class="ui fluid image" src="http://www.restaurantejaujacr.com/wp-content/uploads/2016/03/plane-icon.png" style="margin-top: 20px; height: 200px; width: auto">
+            <div class="content" style="margin-top: 15px;">
+              Voyagez où jamais vous n'auriez imaginés vous rendre !
+
+
+
+              <div class="sub header" style="margin-top: 17px">Le principe de travel skills est le <b>partage de services</b>.
+              Vous partagez alors la vie et la culture des habitants, impliquant un magnifique voyage culturelle loin des clubs et lieux de tourisme.
+              </div>
+              <div class="sub header" style="margin-top: 17px">
+                Pour ceux qui préfèrent se sédantariser d'avantage, il est possible grace à ma modularité du temps de disponibilité des hôtes de rester plusieurs jours, même semaines, suivant le type de service rendu.
+              </div>
+              <div class="sub header" style="margin-top: 17px">
+                Les services et la disponibilité de l'hôte aura été définis par un contrat éffectué par Travel Skills
+              </div>
+            </div>
+
+          </h1>
+              <div class="ui huge circular green basic button" style="margin-top: 4.5px;background-color: transparent !important;">Voyager avec Travel Skills</div>
+            </div>
+          </div>
+          <div class="column center aligned">
+            <div class="ui segment" style="background: rgba(255, 255, 255, .7);">
+            <h1 class="ui huge header">
+              <img class="ui fluid image" src="http://demo.dnnrox.com/Portals/_default/Skins/Flatna/img/icons/flag@2x.png" style="margin-top: 45px; height: 140px; width: auto">
+              <div class="content" style="margin-top: 50px;">
+                Recevez des aventuriez de tous lieux chez vous
+
+
+
+                <div class="sub header" style="margin-top: 16px">Le principe de travel skills est le <b>partage de services</b>.
+                  Vous partagez alors la vie et la culture d'un étranger, vous permettant d'échanger et d'ouvrir votre cercle de connaissance.
+                </div>
+                <div class="sub header" style="margin-top: 16px">
+                  En échange de cet hebergement d'une durée variable les voyageurs vous prodigerons des services. <br />
+                  La présence et les services auront été définis via à un contrat éffectué par Travel Skills, vous que vous aurez au préalablement définie
+                </div>
+              </div>
+
+            </h1>
+              <div class="ui huge circular blue basic button" style="margin-top: 20.5px;background-color: transparent !important;">Devenir hôte avec Travel Skills</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="one column row" style="margin-bottom: 40px">
+          <div class="column center aligned">
+            <div class="ui segment"  style="background-color: #26303b">
+            <div class="row container">
+
+              <h1 class="ui huge inverted header">
+                <img class="ui fluid image" src="http://368ef992e8f1d1218849-73e99dc388b17779f3b4fdc65d98c043.r11.cf2.rackcdn.com/Timer.png" style="margin-top: 20px; height: 150px; width: auto">
+                <div class="content" style="margin-top: 10px">
+                  WIP !!! Des outils adaptés et conçu pour faciliter la conception de votre projet de voyage
+                  <div class="sub header" style="margin-top: 10px">Car chaque minutes comptent !</div>
+                </div>
+              </h1>
+
+
+            </div>
+            </div>
+
+
+
+
+
+
+
+
+
+          </div>
+        </div>
       </div>
+
     </div>
-  </div>
+
+
+
+
+
