--- a/src/app/huge-header-layout/huge-header-layout.component.html
+++ b/src/app/huge-header-layout/huge-header-layout.component.html
@@ -1,12 +1,43 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
 
 <style type="text/css">
   .hidden.menu {
     display: none;
   }
 
+  @keyframes nohover {
+    0%   {filter: grayscale(40%);}
+    25%  {filter: grayscale(30%);}
+    50%  {filter: grayscale(20%);}
+    100% {filter: grayscale(10%);}
+  }
+
+  @keyframes hover {
+    0%   {filter: grayscale(10%);}
+    25%  {filter: grayscale(20%);}
+    50%  {filter: grayscale(30%);}
+    100% {filter: grayscale(40%);}
+  }
+
   .masthead.segment {
-    min-height: 500px;
+    min-height: 200px;
     padding: 1em 0em;
+    /*background-image: url("https://static.wixstatic.com/media/f337f3_421f14c99b4d47a5a6dc555e8737cf25.jpg/v1/fill/w_2464,h_1632,al_c,q_90/f337f3_421f14c99b4d47a5a6dc555e8737cf25.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    animation-name: nohover;
+    animation-duration: 4s;
+    filter: grayscale(10%);*/
+  }
+
+
+  .masthead:hover {
+
+    animation-name: hover;
+    animation-duration: 4s;
+    filter: grayscale(40%);
   }
   .masthead .logo.item img {
     margin-right: 1em;
@@ -14,15 +45,37 @@
   .masthead .ui.menu .ui.button {
     margin-left: 0.5em;
   }
-  .masthead h1.ui.header {
-    margin-top: 3em;
-    margin-bottom: 0em;
+  #title {
+    margin-top: 1.3em;
+    margin-bottom: 0.3em;
     font-size: 4em;
     font-weight: normal;
+
+
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    border: none;
+    font: normal 84px/normal "raleway", Helvetica, sans-serif;
+    color: rgb(224, 239, 242);
+    text-align: center;
+    -o-text-overflow: clip;
+    text-overflow: clip;
+    text-shadow: -6px 3px 0 #2185d0 , -11px 7px 0 rgb(10,14,39) ;
+    -webkit-transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+    -moz-transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+    -o-transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+    transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
   }
-  .masthead h2 {
+
+  #title:hover {
+    font: normal normal 400 84px/normal "raleway", Helvetica, sans-serif;
+    text-shadow: 6px 3px 0 rgb(58,80,217) , 11px 7px 0 rgb(10,14,39) ;
+  }
+  #sub, .sub {
     font-size: 1.7em;
     font-weight: normal;
+    text-shadow: 2px 1px 0 black;
   }
 
   .ui.vertical.stripe {
@@ -83,6 +136,15 @@
       margin-top: 0.5em;
       font-size: 1.5em;
     }
+  }
+
+
+  .parallax {
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(3px);
+    -o-filter: blur(3px);
+    -ms-filter: blur(3px);
+    filter: blur(3px);
   }
 
 
@@ -150,52 +212,74 @@
 
 
 <!-- Page Contents -->
-<div class="pusher">
-  <div class="ui inverted vertical masthead center aligned segment">
-    <div class="ui grid container">
-      <div class="one column row  computer only">
-        <div class="column">
-          <app-menu-computer></app-menu-computer>
-        </div>
+<div class="parallax-container">
+  <div class="parallax" materialize="parallax"><img height="200%" src="http://vincenzomelita.it/wordpress/wp-content/uploads/2017/03/Malta_flatlandscapes_cover.jpg"></div>
+  <div class="ui grid container middle aligned center aligned" style="width: 100%; height: 100%">
+
+    <div class="one column row middle aligned">
+      <div class="height wide column middle aligned">
+          <h1 class="ui inverted header" id="title">
+            Travel Skills
+          </h1>
+          <h2 class="ui inverted sub header" id="sub">De suberbes voyages rendus moins cher avec l'échange de services </h2>
       </div>
-      <div class="one column row  tablet mobile only">
-        <div class="column">
-          <app-menu-tab-mobile></app-menu-tab-mobile>
-        </div>
+
+    </div>
+    <div class="one column row center aligned">
+      <div class="column">
+        <!--<div class="ui huge right labeled icon primary button" style="float: none !important;">En savoir plus <i class="down arrow icon"></i></div>-->
       </div>
     </div>
-    <!--<div class="ui container">
-      <div class="ui large secondary inverted pointing menu">
-        <a class="toc item">
-          <i class="sidebar icon"></i>
-        </a>
-        <a class="active item">Home</a>
-        <a class="item">Work</a>
-        <a class="item">Company</a>
-        <a class="item">Careers</a>
-        <div class="right item">
-          <a class="ui inverted button">Log in</a>
-          <a class="ui inverted button">Sign Up</a>
-        </div>
-      </div>
-    </div>-->
-
-    <div class="ui text container">
-      <h1 class="ui inverted header">
-        Travel Skills
-      </h1>
-      <h2 class="ui inverted sub header">Lorem Ipsum ....</h2>
-      <hr> <br>
-      <div class="ui huge primary button">Get Started <i class="right arrow icon"></i></div>
-    </div>
-
   </div>
+
+</div>
+<div class="section white">
+  <div class="ui grid">
+    <div class="one column row  computer only"  style="margin-bottom: 3px !important;">
+      <div class="column">
+        <app-menu-computer></app-menu-computer>
+      </div>
+    </div>
+    <div class="one column row  tablet mobile only"  style="margin-bottom: 3px !important;">
+      <div class="column">
+        <app-menu-tab-mobile></app-menu-tab-mobile>
+      </div>
+    </div>
+  </div>
+</div>
 
   <div class="ui vertical segment">
     <router-outlet></router-outlet>
   </div>
-
-  <div class="ui inverted vertical footer segment">
+<div class="ui inverted vertical footer segment grid mobile only tablet only" style="margin: 0px !important; margin-bottom: 0px !important; border-radius: 0px !important;">
+  <div class="ui container">
+    <div class="ui stackable inverted divided equal height stackable grid">
+      <div class="three wide column">
+        <h4 class="ui inverted header">About</h4>
+        <div class="ui inverted link list">
+          <a href="#" class="item">Sitemap</a>
+          <a href="#" class="item">Contact Us</a>
+          <a href="#" class="item">Religious Ceremonies</a>
+          <a href="#" class="item">Gazebo Plans</a>
+        </div>
+      </div>
+      <div class="three wide column">
+        <h4 class="ui inverted header">Services</h4>
+        <div class="ui inverted link list">
+          <a href="#" class="item">Banana Pre-Order</a>
+          <a href="#" class="item">DNA FAQ</a>
+          <a href="#" class="item">How To Access</a>
+          <a href="#" class="item">Favorite X-Men</a>
+        </div>
+      </div>
+      <div class="seven wide column">
+        <h4 class="ui inverted header">Footer Header</h4>
+        <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+      </div>
+    </div>
+  </div>
+</div>
+  <div class="ui inverted vertical footer segment grid computer only" id="footer" style="position: fixed; bottom: -17px; width: 100%; z-index: -100; border-radius: 0px !important;">
     <div class="ui container">
       <div class="ui stackable inverted divided equal height stackable grid">
         <div class="three wide column">
@@ -223,8 +307,15 @@
       </div>
     </div>
   </div>
-</div>
 
 
+<script>
+(function($){
+$(function(){
 
+$('.button-collapse').sideNav();
+
+}); // end of document ready
+})(jQuery);
+</script>
 
