--- a/src/app/menu-computer/menu-computer.component.html
+++ b/src/app/menu-computer/menu-computer.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="ui large secondary inverted pointing menu" *ngIf="!logging.isLogin()">
+<div class="ui large secondary menu" *ngIf="!logging.isLogin()" style="border:none; margin-bottom: -6px !important;">
   <div class="ui container">
     <a class="active item" routerLink="/">Accueil</a>
     <a class="item" routerLink="/manager/hoster">Devenir hote</a>
@@ -8,16 +8,16 @@
     <a class="item">Careers</a>
     <div class="right menu">
       <div class="item">
-        <a class="ui button" routerLink="/enter/l">Se connecter</a>
-      </div>
-      <div class="item">
-        <a class="ui primary button" routerLink="/enter/r">S'inscrire</a>
+          <div class="ui buttons">
+        <a class="ui red button circular" routerLink="/enter/l" style="background-color: #f55c4d !important;border-radius: 18px 0px 0px 18px !important;">Se connecter</a>
+              <a class="ui primary button circular" style="background-color: #4d92f5 !important; border-radius: 0px 18px 18px 0px !important;" routerLink="/enter/r">S'inscrire</a>
+          </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="ui large secondary inverted pointing menu" *ngIf="logging.isLogin()">
+<div class="ui large secondary menu" *ngIf="logging.isLogin()">
     <div class="ui container">
         <a class="active item" routerLink="/">Accueil</a>
         <a class="item" routerLink="/manager/hoster">Devenir hote</a>
@@ -33,3 +33,5 @@
         </div>-->
     </div>
 </div>
+
+<script type="text/javascript" script-name="raleway" src="http://use.edgefonts.net/raleway.js"></script>
