--- a/src/app/traveller/traveller-trip/traveller-trip.component.css
+++ b/src/app/traveller/traveller-trip/traveller-trip.component.css
@@ -3,6 +3,6 @@ agm-map {
   width: 650px;
 }
 
-marker.options: {
-    icon:'//developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png"'
-}
+/*marker.options: {*/
+    /*icon:'//developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png"'*/
+/*}*/
